# lab-2-vale_y_ame

./: LICENSE  README.md  total-normalization.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.2/: package.cache  total-normalization-0.1.0.0-inplace.conf
src/Main/: Main.hs
src/lib/: LC.hs
